# geophysics_repo

./: .gitignore  README.md  general_gp.yml  pyproject.toml  requirements.txt  setup.py
ERT/gap_filling/: test_forward.py  test_scikit.py
ERT/gap_filling/invdir/: mesh.geo  mesh.msh
data_processing/Bruenlital/: init_project.py
data_processing/Bruenlital/00_data/: 20250710_txt_20250709_prot.txt
data_processing/Bruenlital/10_info/: 20250710_prelim_results.pptx  field_notes_bruennlital.txt
data_processing/Bruenlital/50_coord/: 20250701_ERT_coords.kml  20250710_coords_centers.csv  20250710_coords_corners.csv  20250710_coords_raw.csv  20250710_map.qgz  sheet-bru_477777.xml
data_processing/Bruenlital/60_map/: 20250710_map.qgz
data_processing/ERT/gap_filling/: test_forward.py
data_processing/TEM/Test_TEMFAST/: test.py
data_processing/Tutorials/: tutorial_ForwardTEM.ipynb  tutorial_ForwardTEM_with_IP.ipynb  tutorial_InteractiveTEM.ipynb  tutorial_Interactive_EMI.ipynb  tutorial_JupyterInteractiveTEM.ipynb
src/gp_tools/: __init__.py
src/gp_tools/core/: __init__.py  coordinate_handler.py  file_types.py  folder_handler.py  survey_base.py  utils.py
tests/tem/: test_inversion.py
tutorials/EMI/: tutorial_Interactive_EMI.ipynb
tutorials/ERT/: reconstructed.ohm  simulated.ohm  test.ipynb  test.ohm  tutorial_GapFillingERT.ipynb  tutorial_SimulateProfileERT.ipynb
tutorials/TEM/: tutorial_ForwardTEM.ipynb  tutorial_ForwardTEM_Kat.ipynb  tutorial_ForwardTEM_with_IP.ipynb  tutorial_ForwardTEM_with_IP_Jakob.ipynb  tutorial_JupyterInteractiveTEM.ipynb
(+1159 files in other folders)
